# Agent-Avatar

./: .dockerignore  .gitignore  EMOTION_MAPPING_GUIDE.md  LICENSE  LIVE2D_MODELS.md  README.md  docker-compose.yml  dockerfile  model_dict.json  pyproject.toml  run_server.py
assets/live2d-models/murakumo/: 01.json
backups/: agent_zero_client.py.backup  agent_zero_client.py.backup.stream  agent_zero_llm.py.backup.stream  conversation_handler.py.backup  routes.py.backup  vtube_message.py.backup  websocket_handler.py.backup
characters/: asuna_13.yaml  asuna_19.yaml  asuna_20.yaml  asuna_21.yaml  asuna_22.yaml  asuna_24.yaml  asuna_25.yaml  asuna_26.yaml  asuna_27.yaml  asuna_28.yaml  asuna_29.yaml  asuna_30.yaml  asuna_33.yaml  asuna_34.yaml  asuna_35.yaml  asuna_46.yaml  epsilon.yaml  haru_02.yaml  kato.yaml  liko_01.yaml  liko_02.yaml  liko_04.yaml  liko_07.yaml  liko_09.yaml  liko_10.yaml  liko_12.yaml  liko_14.yaml  liko_15.yaml  liko_18.yaml  mao_pro.yaml  natori.yaml  raynos.yaml  shizuku.yaml  tsukimi.yaml
config/templates/: conf.default.yaml
forAgentZero/: README.md  avatar_message_stream.py
forAgentZero/avatar_fast_agent/: README.md  _context.md  avatar_config.yaml
forAgentZero/twitch_avatar_agent/: README.md  _context.md  twitch_config.yaml
frontend/: index.html
src/agent_avatar/: agent_zero_client.py  routes.py  routes.py.backup  server.py  service_context.py  websocket_handler.py
tests/: README.md  expression-test-universal.js  test_agent_zero_endpoints.py  test_agent_zero_image.py
tools/: README.md  __init__.py  merge_configs.py  upgrade.py
(+40 files in other folders)
